# passport-attestation

./: .gitmodules  README.md
circuits/: Prover.toml  Verifier.toml
circuits/contract/circuits/: plonk_vk.sol
circuits/proofs/: circuits.proof
circuits/src/: main.nr
contracts/: foundry.toml
contracts/script/: Deploy.s.sol  DeployKeyRegistry.s.sol
contracts/src/: AnonymousAttester.sol  AttestationResolver.sol  KeyRegistry.sol  PoseidonHasher.sol  Schema.sol  UltraPlonkVerifier.sol  Verifier.sol
contracts/src/resolvers/: BadgeholderResolver.sol  DelegateResolver.sol  DelegatorResolver.sol  ICustomResolver.sol
contracts/test/: AnonymousAttestation.t.sol  Attestation.t.sol
demo/: .env.example  package.json  pnpm-lock.yaml
demo/public/: circuits.json
demo/src/: env.mjs
demo/src/app/: layout.tsx  page.tsx
demo/src/components/: wagmi-provider.tsx
demo/src/components/button/: connect-wallet.tsx  mode-toggle.tsx
demo/src/components/card/: attestation-list.tsx  attestation.tsx  endorse-public.tsx
demo/src/components/ui/: button.tsx  use-toast.ts
demo/src/config/: chain.ts  site.ts
demo/src/constants/: contracts.ts
demo/src/hooks/: useEnabledRoles.ts  useMainnetEnsName.ts
demo/src/lib/: address.ts  chain.ts  prover.ts
demo/src/services/: curia.ts  eas.ts
demo/src/types/: attestation.ts  role.ts  signature.ts
sig-gen/: .env.example  Cargo.toml  Dockerfile  cloudbuild.yaml
sig-gen/src/: lib.rs  main.rs
sig-gen/src/api/: mod.rs  types.rs
sig-gen/src/crypto/: affine.rs  mod.rs
sig-gen/src/query/: attestation.rs  mod.rs  types.rs
