[package]
name = "sig-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
ark-bn254 = { version = "0.4.0", features = ["std", "scalar_field"], default-features = false }
ark-ff = { version = "0.4.2", features = ["parallel", "std"] }
light-poseidon = { git = "https://github.com/Lightprotocol/light-poseidon.git", version = "0.2.0" }
